# national_id

./: README.md  pyproject.toml  requirements.txt  requirments.txt  server.py
.github/workflows/: national_id.yaml
docker/: Dockerfile
lib/: national_id.py
tests/: test_endpoint.py  test_national_id.py
utils/: egypt_codes.py
